--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 
           <h1 id="project_title">Wordlists</h1>
           <h2 id="project_tagline"></h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/gbn48/wordlists/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/gbn48/wordlists/tarball/master">Download this project as a tar.gz file</a>
+            </section>
         </header>
     </div>
 
@@ -27,9 +32,12 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a id="‘爱背词’的词表" class="anchor" href="#%E7%88%B1%E8%83%8C%E8%AF%8D%E7%9A%84%E8%AF%8D%E8%A1%A8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>爱背词的词表</h1>
+<a id="词表使用说明" class="anchor" href="#%E8%AF%8D%E8%A1%A8%E4%BD%BF%E7%94%A8%E8%AF%B4%E6%98%8E" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>词表使用说明</h1>
 
-<p>回复词表的名字（冒号左边的部分）即可切换到相应的词表。同时原词表的学习进度会被保留。</p>
+<p>在“爱背词”<strong>主界面</strong>直接回复<strong>词表的名字</strong>（冒号左边的部分）即可切换到相应的词表。同时原词表的学习进度会被保留。</p>
+
+<h1>
+<a id="爱背词的词表" class="anchor" href="#%E7%88%B1%E8%83%8C%E8%AF%8D%E7%9A%84%E8%AF%8D%E8%A1%A8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>“爱背词”的词表</h1>
 
 <ul>
 <li>GRE : GRE 核心词汇</li>
