--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1>
 <a id="词表使用说明" class="anchor" href="#%E8%AF%8D%E8%A1%A8%E4%BD%BF%E7%94%A8%E8%AF%B4%E6%98%8E" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>词表使用说明</h1>
 
-<p>在“爱背词”<strong>主界面</strong>直接回复<strong>词表的名字</strong>（冒号左边的部分）即可切换到相应的词表。同时原词表的学习进度会被保留。</p>
+<p>在“爱背词”服务号的<strong>主界面</strong>直接回复<strong>词表的名字</strong>（冒号左边的部分）即可切换到相应的词表。同时原词表的学习进度会被保留。</p>
 
 <h1>
 <a id="爱背词的词表" class="anchor" href="#%E7%88%B1%E8%83%8C%E8%AF%8D%E7%9A%84%E8%AF%8D%E8%A1%A8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>“爱背词”的词表</h1>
@@ -60,7 +60,7 @@
 </ul>
 
 <h1>
-<a id="欢迎和我们一起建设这个词库" class="anchor" href="#%E6%AC%A2%E8%BF%8E%E5%92%8C%E6%88%91%E4%BB%AC%E4%B8%80%E8%B5%B7%E5%BB%BA%E8%AE%BE%E8%BF%99%E4%B8%AA%E8%AF%8D%E5%BA%93" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>欢迎和我们一起建设这个词库</h1>
+<a id="和我们一起建设这个词库" class="anchor" href="#%E5%92%8C%E6%88%91%E4%BB%AC%E4%B8%80%E8%B5%B7%E5%BB%BA%E8%AE%BE%E8%BF%99%E4%B8%AA%E8%AF%8D%E5%BA%93" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>和我们一起建设这个词库</h1>
 
 <p>我们的词库是开源的。欢迎您通过github的PR上传您的词表。
 如果您不熟悉github，也可以将喜欢的词表整理成容易导入的形式发送到 <a href="mailto:gaobin@gbn48.com">gaobin@gbn48.com</a> ，我们表示感谢。</p>
