--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1>
 <a id="词表使用说明" class="anchor" href="#%E8%AF%8D%E8%A1%A8%E4%BD%BF%E7%94%A8%E8%AF%B4%E6%98%8E" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>词表使用说明</h1>
 
-<p>在“爱背词”服务号的<strong>主界面</strong>直接回复<strong>词表的名字</strong>（冒号左边的部分）即可切换到相应的词表。同时原词表的学习进度会被保留。</p>
+<p>在“爱背词”服务号的<strong>主界面</strong>直接回复<strong>词表的名字</strong>（冒号左边的部分）即可切换到相应的词表。原词表的学习进度会被保留。</p>
 
 <h1>
 <a id="爱背词的词表" class="anchor" href="#%E7%88%B1%E8%83%8C%E8%AF%8D%E7%9A%84%E8%AF%8D%E8%A1%A8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>“爱背词”的词表</h1>
