--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <h1>
 <a id="奖励" class="anchor" href="#%E5%A5%96%E5%8A%B1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>奖励</h1>
 
-<p>我们会向学习特别勤奋的同学、提交词表的同学以及向我们提出宝贵意见的同学赠送一些积分。希望以后我们可以有能力让这些积分可以兑换一些小礼物。</p>
+<p>我们会向学习特别勤奋的同学、提交词表的同学以及向我们提出宝贵意见的同学赠送一些积分。希望以后我们可以有能力让这些积分能够兑换一些小礼物。</p>
       </section>
     </div>
 
