--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/gbn48/wordlists">View on GitHub</a>
 
-          <h1 id="project_title">词表清单</h1>
+          <h1 id="project_title">Wordlists</h1>
           <h2 id="project_tagline"></h2>
 
         </header>
@@ -28,7 +28,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a id="词表使用说明" class="anchor" href="#%E8%AF%8D%E8%A1%A8%E4%BD%BF%E7%94%A8%E8%AF%B4%E6%98%8E" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>词表使用说明</h1>
+<a id="使用说明" class="anchor" href="#%E8%AF%8D%E8%A1%A8%E4%BD%BF%E7%94%A8%E8%AF%B4%E6%98%8E" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>词表使用说明</h1>
 
 <p>在“爱背词”服务号的<strong>主界面</strong>直接回复<strong>词表的名字</strong>（冒号左边的部分）即可切换到相应的词表。原词表的学习进度会被保留。</p>
 
