--- a/index.html
+++ b/index.html
@@ -30,20 +30,33 @@
         <h1>
 <a id="使用说明" class="anchor" href="#%E8%AF%8D%E8%A1%A8%E4%BD%BF%E7%94%A8%E8%AF%B4%E6%98%8E" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>词表使用说明</h1>
 
-<p>在“爱背词”服务号的<strong>主界面</strong>直接回复<strong>词表的名字</strong>（左列）即可切换到相应的词表。原词表的学习进度会被保留。</p>
+<p>在“<strong>爱背词</strong>”服务号的<strong>主界面</strong>直接回复<strong>词表的名字</strong>（冒号左边的部分）即可切换到相应的词表。原词表的学习进度会被保留。</p>
 
 <h1>
 <a id="爱背词的词表" class="anchor" href="#%E7%88%B1%E8%83%8C%E8%AF%8D%E7%9A%84%E8%AF%8D%E8%A1%A8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>“爱背词”的词表</h1>
 
+<!--
 <table>
   <tr><th>name</th></th><th>description</th></tr>
   <tr><td>GRE</td><td>GRE核心词汇</td></tr>
   <tr><td>toefl-0</td><td>托福听力词汇</td></tr>
+  <tr><td>toefl-1</td><td>托福阅读词汇</td></tr>
   <tr><td>cet6</td><td>六级词汇</td></tr>
   <tr><td>cet4</td><td>四级词汇(abandon)</td></tr>
   <tr><td>nmet</td><td>高考英语考试大纲</td></tr>
   <tr><td>ielts</td><td>雅思核心700词</td></tr>
 </table>
+-->
+
+<ul>
+<li>GRE : GRE核心词汇</li>
+<li>toefl-0 : 托福听力词汇</li>
+<li>toefl-1 : 托福阅读词汇</li>
+<li>cet6 : 六级词汇</li>
+<li>cet4 : 四级词汇(abandon)</li>
+<li>nmet : 高考英语考试大纲</li>
+<li>ielts : 雅思核心700词</li>
+</ul>
 
 <p>目前我们只提供了这些词表。</p>
 <p>词表名称区分大小写。</p>
