--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 <li>GRE : GRE核心词汇</li>
 <li>toefl-0 : 托福听力词汇</li>
 <li>toefl-1 : 托福阅读词汇</li>
+<li>pee : 最新考研大纲词汇</li>
 <li>cet6 : 六级词汇</li>
 <li>cet4 : 四级词汇(abandon)</li>
 <li>nmet : 高考英语考试大纲</li>
@@ -65,9 +66,12 @@
 <a id="近期会加入的词表" class="anchor" href="#%E8%BF%91%E6%9C%9F%E4%BC%9A%E5%8A%A0%E5%85%A5%E7%9A%84%E8%AF%8D%E8%A1%A8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>近期会加入的词表</h1>
 
 <ul>
-<li>考研英语词表</li>
-<li>新概念英语词表</li>
+<li>新概念英语1-4册词表</li>
+<li>清华水平一</li>
+<li>清华水平二</li>
 </ul>
+
+<p>吃土打字员正在加班录入以上词表，不日即可上线。</p>
 
 <h1>
 <a id="和我们一起建设这个词库" class="anchor" href="#%E5%92%8C%E6%88%91%E4%BB%AC%E4%B8%80%E8%B5%B7%E5%BB%BA%E8%AE%BE%E8%BF%99%E4%B8%AA%E8%AF%8D%E5%BA%93" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>和我们一起建设这个词库</h1>
