--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 -->
 
 <ul>
-<li>GRE : GRE核心词汇</li>
+<li>GRE : GRE核心词汇(默认)</li>
 <li>toefl-0 : 托福听力词汇</li>
 <li>toefl-1 : 托福阅读词汇</li>
 <li>pee : 最新考研大纲词汇</li>
