--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 -->
 
 <ul>
-<li>GRE : GRE核心词汇(默认)</li>
+<li>GRE : GRE核心词汇</li>
 <li>toefl-0 : 托福听力词汇</li>
-<li>toefl-1 : 托福阅读词汇</li>
+<li>toefl-1 : 托福阅读词汇(默认)</li>
 <li>pee : 最新考研大纲词汇</li>
 <li>cet6 : 六级词汇</li>
 <li>cet4 : 四级词汇(abandon)</li>
