--- a/index.html
+++ b/index.html
@@ -50,17 +50,16 @@
 
 <ul>
 <li>GRE : GRE核心词汇</li>
-<li>toefl-0 : 托福听力词汇</li>
-<li>toefl-1 : 托福阅读词汇(默认)</li>
+<li>toefl : 托福词汇(默认)</li>
 <li>pee : 最新考研大纲词汇</li>
 <li>cet6 : 六级词汇</li>
 <li>cet4 : 四级词汇(abandon)</li>
 <li>nmet : 高考英语考试大纲</li>
-<li>ielts : 雅思核心700词</li>
 </ul>
 
 <p>目前我们只提供了这些词表。</p>
-<p>词表名称区分大小写。</p>
+<p>词表各词表单词会有一些重复，扣除重复词汇，全部背完上述词表，您将达到1.6万词汇量，其中14048词带有发音。</p>
+<p>因为微信开发者接口的一些限制，尽管我们购买了认证服务，仍然只能为您提供这么多带发音的单词。如果您需要冲击更高的词汇量，暂时只能选择其他软件了。</p>
 
 <h1>
 <a id="近期会加入的词表" class="anchor" href="#%E8%BF%91%E6%9C%9F%E4%BC%9A%E5%8A%A0%E5%85%A5%E7%9A%84%E8%AF%8D%E8%A1%A8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>近期会加入的词表</h1>
@@ -69,9 +68,23 @@
 <li>新概念英语1-4册词表</li>
 <li>清华水平一</li>
 <li>清华水平二</li>
+<li>医学词汇表</li>
+<li>化学词汇表</li>
 </ul>
 
 <p>吃土打字员正在加班录入以上词表，不日即可上线。</p>
+
+
+<h1>
+<a id="已经准备下架的词表" class="anchor" href="#%E8%BF%91%E6%9C%9F%E4%BC%9A%E5%8A%A0%E5%85%A5%E7%9A%84%E8%AF%8D%E8%A1%A8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>近期会加入的词表</h1>
+
+<ul>
+  <li>toefl-0 : 托福听力词汇</li>
+  <li>toefl-1 : 托福阅读词汇</li>
+  <li>ielts-0 : 雅思核心（700词）</li>
+</ul>
+
+<p>我们不建议您选择学习这些词表，它们会被下线。</p>
 
 <h1>
 <a id="和我们一起建设这个词库" class="anchor" href="#%E5%92%8C%E6%88%91%E4%BB%AC%E4%B8%80%E8%B5%B7%E5%BB%BA%E8%AE%BE%E8%BF%99%E4%B8%AA%E8%AF%8D%E5%BA%93" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>和我们一起建设这个词库</h1>
