--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <li>nmet : 高考英语考试大纲</li>
 </ul>
 
-<p>目前我们只提供了这些词表。</p>
+<p>目前我们<strong>只</strong>提供了这些词表。</p>
 <p>词表各词表单词会有一些重复，扣除重复词汇，全部背完上述词表，您将达到1.6万词汇量，其中14048词带有发音。</p>
 <p>因为微信开发者接口的一些限制，尽管我们购买了认证服务，仍然只能为您提供这么多带发音的单词。如果您需要冲击更高的词汇量，暂时只能选择其他软件了。</p>
 
