--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 <h1>
 <a id="和我们一起建设这个词库" class="anchor" href="#%E5%92%8C%E6%88%91%E4%BB%AC%E4%B8%80%E8%B5%B7%E5%BB%BA%E8%AE%BE%E8%BF%99%E4%B8%AA%E8%AF%8D%E5%BA%93" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>和我们一起建设这个词库</h1>
 
-<p>我们的词库是开源的。欢迎您通过github的PR上传您的词表。(https://github.com/gbn48/wordlists   基于BSD协议开源)
-如果您不熟悉github，也可以将喜欢的词表整理成容易导入的形式发送到 <a href="mailto:gaobin@gbn48.com">gaobin@gbn48.com</a> ，我们表示感谢。</p>
+<p>我们的词库是开源的。欢迎您通过github的PR上传您的词表。(https://github.com/gbn48/wordlists   基于BSD协议开源)</p>
+<p>如果您不熟悉github，也可以将喜欢的词表整理成容易导入的形式发送到 <a href="mailto:gaobin@gbn48.com">gaobin@gbn48.com</a> ，我们表示感谢。</p>
 
 <h1>
 <a id="奖励" class="anchor" href="#%E5%A5%96%E5%8A%B1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>奖励</h1>
